Fix margins on mobile

--- a/styles.css
+++ b/styles.css
@@ -172,9 +172,18 @@ article img {
         width: 45px;
     }
 
+    .content-header-section {
+        margin-bottom: 45px;
+    }
+
     .portfolio-section {
         grid-template-columns: 1fr;
         row-gap: 55px;
+        margin-bottom: 30px;
+    }
+
+    .more-section {
+        margin-bottom: 30px;
     }
 
     .footer-section-container {
